Update Bookmark manager

--- a/4. Heading, Paragraphs and Links/bookmarkmanager.html
+++ b/4. Heading, Paragraphs and Links/bookmarkmanager.html
@@ -12,8 +12,8 @@
     <p><a href="https://www.youtube.com">Open YouTube</a></p>
     <p><a href="https://www.linkedin.com">Open LinkedIn</a></p>
     <h2>Secondary Bookmarks</h2>
-    <p><a href="https://www.grok.com">Open Grok</a></p>
-    <p><a href="https://www.gemini.com">Open Gemini</a></p>
-    <p><a href="https://www.github.com">Open GitHub</a></p>
+    <p><a target="_blank" href="https://www.grok.com">Open Grok</a></p>
+    <p><a target="_blank" href="https://www.gemini.com">Open Gemini</a></p>
+    <p><a target="_blank" href="https://www.github.com">Open GitHub</a></p>
 </body>
 </html>
