--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image, Lists, and Tables in HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <img src="image.jpg" height="370" alt="Train view image">
     <br>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>Shresth</td>
+            <td>22</td>
+        </tr>
+    </table>
+
 </body>
+
 </html>
