--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -15,10 +15,12 @@
         <tr>
             <th>Name</th>
             <th>Age</th>
+            <th colspan="2">Merged Columns</td>
         </tr>
         <tr>
             <td>Shresth</td>
             <td>22</td>
+            <td rowspan="2">Data entered here</td>
         </tr>
     </table>
 
