Add an Unordered List

--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -24,6 +24,13 @@
         </tr>
     </table>
 
+    <h2>Unordered List</h2>
+    <ul>
+        <li>List item 1</li>
+        <li>List item 2</li>
+        <li>Hakuna Matata!</li>
+    </ul>
+
 </body>
 
 </html>
