Add an Ordered List

--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -31,6 +31,14 @@
         <li>Hakuna Matata!</li>
     </ul>
 
+    <h2>Ordered List</h2>
+    <ol>
+        <li>Boil 2 cups of water in a pan.</li>
+        <li>Add the Maggi noodles and cook for approximately 2-3 minutes, or until the noodles are tender but not mushy.</li>
+        <li>Add the Maggi Tastemaker spice mix and stir well to ensure the noodles are coated.</li>
+        <li>Cook for another minute until the noodles are soft and have absorbed the flavors.</li>
+        <li>Serve hot and enjoy!</li>
+    </ol>
 </body>
 
 </html>
