--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <img src="image.jpg" height="370" alt="Train view image">
-    <br>
+    <br><br>
     <table>
+        <caption>Table Caption</caption>
         <tr>
             <th>Name</th>
             <th>Age</th>
@@ -25,7 +26,7 @@
     </table>
 
     <h2>Unordered List</h2>
-    <ul>
+    <ul type="square">
         <li>List item 1</li>
         <li>List item 2</li>
         <li>Hakuna Matata!</li>
