Add thead and tfoot

--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -13,16 +13,23 @@
     <br><br>
     <table>
         <caption>Table Caption</caption>
-        <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th colspan="2">Merged Columns</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th colspan="2">Merged Columns</th>
+            </tr>
+        </thead>
         <tr>
             <td>Shresth</td>
             <td>22</td>
             <td rowspan="2">Data entered here</td>
         </tr>
+        <tfoot>
+            <td>Jaydeep</td>
+            <td>23</td>
+            <td>Forbidden</td>
+        </tfoot>
     </table>
 
     <h2>Unordered List</h2>
@@ -35,7 +42,8 @@
     <h2>Ordered List</h2>
     <ol>
         <li>Boil 2 cups of water in a pan.</li>
-        <li>Add the Maggi noodles and cook for approximately 2-3 minutes, or until the noodles are tender but not mushy.</li>
+        <li>Add the Maggi noodles and cook for approximately 2-3 minutes, or until the noodles are tender but not mushy.
+        </li>
         <li>Add the Maggi Tastemaker spice mix and stir well to ensure the noodles are coated.</li>
         <li>Cook for another minute until the noodles are soft and have absorbed the flavors.</li>
         <li>Serve hot and enjoy!</li>
