Add Definition List

--- a/5. Image, Lists, and Tables in HTML/index.html
+++ b/5. Image, Lists, and Tables in HTML/index.html
@@ -48,6 +48,11 @@
         <li>Cook for another minute until the noodles are soft and have absorbed the flavors.</li>
         <li>Serve hot and enjoy!</li>
     </ol>
+    <h2>Definition List</h2>
+    <dl>
+        <dt>Lorem7</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing.</dd>
+    </dl>
 </body>
 
 </html>
