--- a/7. Forms and Input tags in HTML/index.html
+++ b/7. Forms and Input tags in HTML/index.html
@@ -18,7 +18,11 @@
             <input type="radio" name="gender" id="male">
             <label for="male">Male</label>
             <input type="radio" name="gender" id="female">
-            <label for="male">Female</label>
+            <label for="female">Female</label>
+        </div>
+        <div>
+            <input type="checkbox" name="subscribe" id="subscribe" value="yes">
+            <label for="subscribe">Subscribe to newsletter</label>
         </div>
     </form>
 </body>
