--- a/7. Forms and Input tags in HTML/index.html
+++ b/7. Forms and Input tags in HTML/index.html
@@ -24,6 +24,10 @@
             <input type="checkbox" name="subscribe" id="subscribe" value="yes">
             <label for="subscribe">Subscribe to newsletter</label>
         </div>
+        <div>
+            <label for="comment">Enter your comment</label><br>
+            <textarea name="comment" id="comment" rows="7" cols="50"></textarea>
+        </div>
     </form>
 </body>
 
