--- a/7. Forms and Input tags in HTML/index.html
+++ b/7. Forms and Input tags in HTML/index.html
@@ -28,6 +28,13 @@
             <label for="comment">Enter your comment</label><br>
             <textarea name="comment" id="comment" rows="7" cols="50"></textarea>
         </div>
+        <div>
+            <select name="phones"]">
+                <option value="samsung">Samsung</option>
+                <option value="lg">LG</option>
+                <option value="ios">iPhone</option>
+            </select>
+        </div>
     </form>
 </body>
 
