--- a/7. Forms and Input tags in HTML/index.html
+++ b/7. Forms and Input tags in HTML/index.html
@@ -12,7 +12,7 @@
     <form action="post">
         <div>
             <label for="username">Enter your Username</label>
-            <input type="text" id="username" placeholder="Enter your username">
+            <input type="text" id="username" placeholder="Enter your username" autofocus>
         </div>
         <div>
             <input type="radio" name="gender" id="male">
