Add Span element example

--- a/8. Inline & Block Elements in HTML/index.html
+++ b/8. Inline & Block Elements in HTML/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline and Block Elements</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <p>Hey, I am a paragraph.</p>
     <a href="http://www.google.com">Google</a>
+    <div>I am a block element.</div>
+    <span>I am an inline element.</span>
+    <a href="http://google.com">Yes, he is. Click here to search and confirm.</a>
 </body>
+
 </html>
