Write the Form Quick Quiz

--- a/8. Inline & Block Elements in HTML/index.html
+++ b/8. Inline & Block Elements in HTML/index.html
@@ -14,6 +14,21 @@
     <div>I am a block element.</div>
     <span>I am an inline element.</span>
     <a href="http://google.com">Yes, he is. Click here to search and confirm.</a>
+
+    <!-- Quick Quiz:
+     Without using br tag, write a vertically aligned form asking for name, city and pincode of a user. -->
+    <h1>Quick Quiz Form</h1>
+    <div><label for="name">Enter your name</label></div>
+    <div><input type="text" name="name" id="name" autofocus></div>
+    <div><label for="city"></label></div>
+    <div><label for="city">Select your city</label></div>
+    <div><select name="city" id="city">
+            <option value="singrauli">Singrauli</option>
+            <option value="noida">Noida</option>
+            <option value="sidhi">Sidhi</option>
+        </select></div>
+    <div><label for="pincode">Enter your pincode</label></div>
+    <div><input type="text" id="pincode"></div>
 </body>
 
 </html>
