--- a/9. Id and Classes in HTML/index.html
+++ b/9. Id and Classes in HTML/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="firstdiv" class="red bg-yellow">First</div>
-    <div id="seconddiv">Second</div>
-    <span class ="red">Span</span>
+    <div id="firstdiv" class="red bg-yellow"><p>First: Lorem ipsum dolor, sit amet consectetur adipisicing.</p></div>
+    <div id="seconddiv">Second: Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
+    <span class ="red">Span: Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem.</span>
 </body>
 </html>
