Add h1 tag for Video

--- a/10. Video, Audio and Media in HTML/index.html
+++ b/10. Video, Audio and Media in HTML/index.html
@@ -6,6 +6,7 @@
     <title>Video in HTML</title>
 </head>
 <body>
+    <h1>La formula</h1>
     <video src="video.mp4" controls height="355"></video>
 </body>
 </html>
