Add poster attribute

--- a/10. Video, Audio and Media in HTML/index.html
+++ b/10. Video, Audio and Media in HTML/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>La formula</h1>
-    <video src="video.mp4" controls loop height="355"></video>
+    <video src="video.mp4" controls loop height="355" poster="image.png"></video>
 </body>
 </html>
