--- a/10. Video, Audio and Media in HTML/index.html
+++ b/10. Video, Audio and Media in HTML/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>La formula</h1>
     <video src="video.mp4" controls loop height="355" poster="image.png"></video>
-    <audio src="audio.mp3"></audio>
+    <audio src="audio.mp3" controls loop></audio>
 </body>
 </html>
