--- a/10. Video, Audio and Media in HTML/index.html
+++ b/10. Video, Audio and Media in HTML/index.html
@@ -9,5 +9,8 @@
     <h1>La formula</h1>
     <video src="video.mp4" controls loop height="355" poster="image.png"></video>
     <audio src="audio.mp3" controls loop></audio>
+
+    <!-- Quick Quiz -->
+     
 </body>
 </html>
